--- a/Implementáció/Assets/Scripts/DinoRunner/DinoRunner.asmdef
+++ b/Implementáció/Assets/Scripts/DinoRunner/DinoRunner.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:589cac682005c4745aa1b0691b8c27f0",
-        "GUID:c1d5fb229221e434690639f97e5c6081"
+        "GUID:c1d5fb229221e434690639f97e5c6081",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
