--- a/Implementáció/Assets/Scripts/GC/GC.asmdef
+++ b/Implementáció/Assets/Scripts/GC/GC.asmdef
@@ -2,7 +2,8 @@
     "name": "GC",
     "rootNamespace": "GC",
     "references": [
-        "ProjectCore"
+        "ProjectCore",
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
